# Bachelorarbeit-Code

./: .gitignore  .gitmodules  README.md
.github/workflows/: ci.yml
Sunsensor_Data/: .~lock.28.08.2021 17.20.54 ADPD2140_X.txt#
python/: RotationMatrix.py  polynomial-fit.py
sun-sensor-simulator/: +  ADPD2140  CMakeLists.txt  a.out  black_body.cpp  black_body.h  light_source.cpp  light_source.h  main.cpp  matlib.cpp  matlib.h  misc.h  particle.cpp  particle.h  plane.cpp  plane.h  plot.gp  sun_sensor.cpp  sun_sensor.h  sun_sensor_data_parser.h  test
sun-sensor-simulator/.cache/clangd/index/: lut.h.14EBF75A1FF1E34C.idx  main.cpp.A2B142DB1D983DFB.idx  matlib.h.12FF0978CC94F534.idx  matrix.h.5A9282070FD02CF8.idx  quaternion.h.A19B7317B3E77A64.idx  sun_sensor_data_parser.h.2F15EBEE18C75048.idx  test.h.D44CBDA8C4DC51B4.idx
sun-sensor-simulator/.github/workflows/: ci.yml
sun-sensor-simulator/alignment/: main.cpp  sat_model.cpp  sat_model.h
sun-sensor-simulator/lut/: b-spline.cpp  c-spline.cpp  c-spline.h  lut.cpp  lut.h
sun-sensor-simulator/math/: matlib.cpp  matlib.h  matrix.cpp  matrix.h  quaternion.cpp  quaternion.h
sun-sensor-simulator/sin_fit/: extended_sin_fit.cpp  extended_sin_fit_alt.cpp  sin_fit.cpp  sin_fit.h
sun-sensor-simulator/sun_sensor/: ADPD2140.cpp  ADPD2140.h  ADPD2140_radiant_sensitivity  sun_sensor.cpp  sun_sensor.h
sun-sensor-simulator/test/: test.cpp  test.h  test_matrix.cpp
